[gd_scene load_steps=7 format=3 uid="uid://b7nn2wum1ysg4"]

[ext_resource type="Script" uid="uid://0fj6pi6aahdc" path="res://ui/CombatUI.gd" id="1_abcde"]
[ext_resource type="PackedScene" uid="uid://n1aepjn5qhtn" path="res://ui/StatusIcon.tscn" id="2_fghij"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.1, 0.1, 0.15, 0.6)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.6, 1, 0.5)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.666667, 0.666667, 0.666667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_inhibition"]
bg_color = Color(0, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_composure"]
bg_color = Color(1, 0.254902, 0.254902, 1)

[node name="CombatUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")

[node name="OpponentVitalsContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_top = 20.0
offset_right = 175.0
offset_bottom = 138.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="OpponentVitalsContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="OpponentInhibitionContainer" type="HBoxContainer" parent="OpponentVitalsContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 2

[node name="OpponentInhibitionChunk1" type="ProgressBar" parent="OpponentVitalsContainer/VBoxContainer/OpponentInhibitionContainer"]
custom_minimum_size = Vector2(149, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_inhibition")
max_value = 25.0
value = 25.0
fill_mode = 2
show_percentage = false

[node name="OpponentInhibitionChunk2" type="ProgressBar" parent="OpponentVitalsContainer/VBoxContainer/OpponentInhibitionContainer"]
custom_minimum_size = Vector2(149, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_inhibition")
max_value = 25.0
value = 25.0
fill_mode = 2
show_percentage = false

[node name="OpponentComposureBar" type="ProgressBar" parent="OpponentVitalsContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_composure")
value = 100.0
show_percentage = false

[node name="OpponentComposureLabel" type="Label" parent="OpponentVitalsContainer/VBoxContainer/OpponentComposureBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpponentStats" type="HBoxContainer" parent="OpponentVitalsContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="OpponentFocusIcon" parent="OpponentVitalsContainer/VBoxContainer/OpponentStats" instance=ExtResource("2_fghij")]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="OpponentVitalsContainer/VBoxContainer/OpponentStats"]
layout_mode = 2

[node name="OpponentGuardedContainer" type="HBoxContainer" parent="OpponentVitalsContainer/VBoxContainer/OpponentStats"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="OpponentGuardedUpper" type="Label" parent="OpponentVitalsContainer/VBoxContainer/OpponentStats/OpponentGuardedContainer"]
layout_mode = 2
text = "G[U]: 30%"

[node name="OpponentGuardedLower" type="Label" parent="OpponentVitalsContainer/VBoxContainer/OpponentStats/OpponentGuardedContainer"]
layout_mode = 2
text = "G[L]: 30%"

[node name="PlayerCockpit" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -225.0
offset_top = -420.0
offset_right = 225.0
offset_bottom = -230.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerCockpit"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PlayerVitalsContainer" type="VBoxContainer" parent="PlayerCockpit/VBoxContainer"]
layout_mode = 2

[node name="PlayerInhibitionContainer" type="HBoxContainer" parent="PlayerCockpit/VBoxContainer/PlayerVitalsContainer"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="PlayerInhibitionChunk1" type="ProgressBar" parent="PlayerCockpit/VBoxContainer/PlayerVitalsContainer/PlayerInhibitionContainer"]
custom_minimum_size = Vector2(132, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_inhibition")
max_value = 20.0
value = 20.0
show_percentage = false

[node name="PlayerInhibitionChunk2" type="ProgressBar" parent="PlayerCockpit/VBoxContainer/PlayerVitalsContainer/PlayerInhibitionContainer"]
custom_minimum_size = Vector2(132, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_inhibition")
max_value = 20.0
value = 20.0
show_percentage = false

[node name="PlayerInhibitionChunk3" type="ProgressBar" parent="PlayerCockpit/VBoxContainer/PlayerVitalsContainer/PlayerInhibitionContainer"]
custom_minimum_size = Vector2(132, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_inhibition")
max_value = 10.0
value = 10.0
show_percentage = false

[node name="PlayerComposureBar" type="ProgressBar" parent="PlayerCockpit/VBoxContainer/PlayerVitalsContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_composure")
value = 100.0
show_percentage = false

[node name="PlayerComposureLabel" type="Label" parent="PlayerCockpit/VBoxContainer/PlayerVitalsContainer/PlayerComposureBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerStats" type="HBoxContainer" parent="PlayerCockpit/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerFocusIcon" parent="PlayerCockpit/VBoxContainer/PlayerStats" instance=ExtResource("2_fghij")]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="PlayerCockpit/VBoxContainer/PlayerStats"]
layout_mode = 2

[node name="PlayerTensionLabel" type="Label" parent="PlayerCockpit/VBoxContainer/PlayerStats"]
layout_mode = 2
text = "Tension: 0"

[node name="VSeparator2" type="VSeparator" parent="PlayerCockpit/VBoxContainer/PlayerStats"]
layout_mode = 2

[node name="PlayerArousalLabel" type="Label" parent="PlayerCockpit/VBoxContainer/PlayerStats"]
layout_mode = 2
text = "Arousal: 0"

[node name="ActionContainer" type="HBoxContainer" parent="PlayerCockpit/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DeckCountLabel" type="Label" parent="PlayerCockpit/VBoxContainer/ActionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Deck: 15"

[node name="EndTurnButton" type="Button" parent="PlayerCockpit/VBoxContainer/ActionContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "End Turn"

[node name="DiscardPileLabel" type="Label" parent="PlayerCockpit/VBoxContainer/ActionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Discard: 0"

[node name="PlayerHandContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -220.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
